<resources>
    <string name="app_name">Golden Age</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="IC">IC</string>
    <string name="Birthday">Birthday</string>
    <string name="contact">Contact</string>
    <string name="RegisterDate">Register Date</string>

    <string name="Blood_Type">Blood Type</string>
    <!-- Blood types: O+, O-, A+, A-, B+, B-, AB+, AB- -->
    <string-array name="blood_types">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>



</resources>
