<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_user">

    <!-- THIS IS FOR REGISTER USERS (ADMIN, NURSE, DRIVER) -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Name-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:inputType="textPersonName"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- IC-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_ic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/IC"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- User Type -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Type" />

            <RadioGroup
                android:id="@+id/item_user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/item_user_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Client"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/item_user_nurse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nurse"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/item_user_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Driver"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <!-- Sex -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sex" />

            <RadioGroup
                android:id="@+id/item_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/item_sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/item_sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <!-- Birthday -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Birthday"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:editable="false"
                    android:onClick="showBirthDatePickerDialog"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- Contact-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact"
                    android:inputType="phone"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- Address-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address"
                    android:inputType="textPostalAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- Register date -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_register_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/RegisterDate"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:editable="false"
                    android:onClick="showRegisterDatePickerDialog"
                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>