<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_client">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Name-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:inputType="textPersonName"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- IC-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_IC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_ic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/IC"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- Gender -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender" />

            <RadioGroup
                android:id="@+id/item_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <!-- Age -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_Age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Age"
                    android:inputType="number"

                    />
            </android.support.design.widget.TextInputLayout>

            <!-- Contact-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_Contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact"
                    android:inputType="phone"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- Address-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address"
                    android:inputType="textPostalAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- Register date -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_RegisterDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_register_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/RegisterDate"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:editable="false"
                    android:onClick="showRegisterDatePickerDialog"
                    />

            </android.support.design.widget.TextInputLayout>

            <!-- Patient Name -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_Patient_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:inputType="textPersonName"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- IC-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_Patient_IC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/HintText"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_patient_ic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/IC"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>