<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_patient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Name-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/item_patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- IC-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IC" />

            <EditText
                android:id="@+id/item_patient_ic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Relative Contact-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Relative Contact" />

            <EditText
                android:id="@+id/item_patient_relative_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Relative Name-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Relative Name" />

            <EditText
                android:id="@+id/item_patient_relative_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Birthday -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Birthday" />

            <EditText
                android:id="@+id/item_patient_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Meals -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meals" />

            <CheckBox
                android:id="@+id/cbxPork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pork" />

            <CheckBox
                android:id="@+id/cbxFish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fish" />

            <CheckBox
                android:id="@+id/cbxVegetarian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vegetarian" />

            <TextView
                android:id="@+id/cbxOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Others" />

            <EditText
                android:id="@+id/item_other_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Register date -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register Date" />

            <EditText
                android:id="@+id/item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Photo -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Photo" />

            <Button
                android:id="@+id/btnAddPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Photo" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>